Minor changes to ellaborate alt text and applied animation to social media links

--- a/styleSheet.css
+++ b/styleSheet.css
@@ -5,13 +5,14 @@ body{
 }
 .container-fluid {
     width: 1100px;
-  }
+}
 
 h1{
     padding-top: 50px;
     margin-left: 7%;
     font-family: "Open Sans";
 }
+
 h2{
     margin-left: 7%;
     padding-top: 10px;
@@ -19,23 +20,27 @@ h2{
     text-align: left;
     color: #8f8f8f;
 }
+
 h3{
     font-weight: 300;
     text-align: left;
     color: #8f8f8f;
     font-size: 14px;
 }
+
 .row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
 }
+
 .column {
     flex: 25%;
     max-width: 33.3%;
     padding: 0 4px;
     display: grid;
 }
+
 .column img {
     vertical-align: middle;
     width: 100%;
@@ -111,7 +116,7 @@ h3{
   }
 
   .column img:hover {
-    opacity: 0.3;
+    opacity: 0.3;  
   }
   
   .column1-image1:hover .middle1, .column1-image2:hover .middle2, .column2-image1:hover .middle3, .column2-image2:hover .middle4, .column3-image1:hover .middle5, .column3-image2:hover .middle6 {
@@ -142,4 +147,30 @@ h3{
 .social > a{
     color:#363636;
     text-decoration: none;
+}
+
+.social > a:hover {
+  transform: translateY(-10px);
+  color: #00BFFF;
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: scale(1.5);
+  text-shadow: 0 0 5px black
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
